--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Manuel Larios
-description: Testing out the description markdown.
+description: Senior Project Portfolio
