Added delete page

--- a/hw5/Apartment/Apartment/Apartment.csproj
+++ b/hw5/Apartment/Apartment/Apartment.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\Home\RequestForm.cshtml" />
     <Content Include="Views\Home\ViewForms.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Home\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
