--- a/hw6/WWImporters/WWImporters/WWImporters.csproj
+++ b/hw6/WWImporters/WWImporters/WWImporters.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Models\TransactionType.cs" />
     <Compile Include="Models\VehicleTemperature.cs" />
     <Compile Include="DAL\WWIContext.cs" />
+    <Compile Include="Models\ViewModel\DashboardVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
