--- a/hw7/GiphyApp/GiphyApp/packages.config
+++ b/hw7/GiphyApp/GiphyApp/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.6.2" targetFramework="net472" />
 </packages>
