Modified up.sql to include constraints and added ID to details.cshtml

--- a/hw8/AuctionHouse/AuctionHouse/Web.config
+++ b/hw8/AuctionHouse/AuctionHouse/Web.config
@@ -50,7 +50,7 @@
   </entityFramework>
 
 <connectionStrings>
-  <add name="AuctionHouseDB" connectionString="Server=tcp:hw9db.database.windows.net,1433;Initial Catalog=HW9DB;Persist Security Info=False;User ID=[UserName];Password=[Password];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  <add name="AuctionHouseDB" connectionString="Server=tcp:hw9db.database.windows.net,1433;Initial Catalog=HW9DB;Persist Security Info=False;User ID=[XXXXXXX];Password=[XXXXXXX];MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
 </connectionStrings>
 <system.codedom>
 <compilers>
